<resources>
    <string name="txt_finding_location_friend">Đang tìm vị trí của\u0020</string>
    <string name="txt_finding_location_group_friends">Đang tìm vị trí mọi người trong nhóm\u0020</string>
    <string name="txt_label_finding">Đang tìm\u0020</string>
    <string name="txt_label_recently">\u0020 gần đây</string>
    <string name="txt_label_not_founding">Không tìm thấy\u0020</string>
    <string name="txt_label_follow_direction">Chỉ đường tới \u0020</string>
    <string name="txt_finding_direction">Đang tìm tuyến đường tốt nhất, vui lòng chờ </string>

    <string name="txt_label_walking">Đi bộ/xe đạp</string>
    <string name="txt_label_driving">Lái xe</string>

	<string name="app_name">Phượt Chung</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="edit_user">Sửa thông tin</string>
	<string name="add_group">Tạo nhóm</string>
	<string name="change_password">Đổi mật khẩu</string>
	<string name="menu_home">Trang chủ</string>
	<string name="menu_group">Nhóm tour</string>
	<string name="menu_schedule">Lịch trình</string>
	<string name="menu_setting">Cài đặt</string>
	<string name="menu_introduction">Giới thiệu</string>
	<string name="menu_user">Thông tin cá nhân</string>
	<string name="menu_notifi">Thông báo</string>
	<string name="menu_out">Đăng xuất</string>
	<string name="facebook_app_id">555229505241189</string>
	<string name="fb_login_protocol_scheme">fb555229505241189</string>
	<string name="sign_in">Sign in</string>
	<string name="register">Đăng ký</string>
	<string name="register_here">Register here</string>
	<string name="text_send_email">We have sent an email for resetting your password to your email address. Please check your email for next steps</string>
	<string name="title_activity_maps">Map</string>
	<string name="title_activity_main2">Main2Activity</string>
	<string name="title_home">Dịch Vụ</string>
	<string name="title_dashboard">Bạn bè</string>
	<string name="title_notifications">Notifications</string>
	<string name="dich_vu">Dịch vụ xung quanh</string>

	<!--	Tour Group-->
	<!-- TODO: Remove or change this placeholder text -->
	<string name="txt_finding_location_friend">Đang tìm vị trí của\u0020</string>
	<string name="txt_finding_location_group_friends">Đang tìm vị trí mọi người trong nhóm\u0020</string>
	<string name="txt_label_finding">Đang tìm\u0020</string>
	<string name="txt_label_recently">\u0020 gần đây</string>
	<string name="txt_label_not_founding">Không tìm thấy\u0020</string>
	<string name="txt_label_follow_direction">Chỉ đường tới \u0020</string>
	<string name="txt_finding_direction">Đang tìm tuyến đường tốt nhất, vui lòng chờ </string>
	<string name="txt_label_walking">Đi bộ/xe đạp</string>
	<string name="txt_label_driving">Lái xe</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_sua_tt">Sửa thông tin</string>
	<string name="title_doi_mk">Đổi mật khẩu</string>
	<string name="txt_no_data_tour_group">Bạn chưa có nhóm. Hãy tạo nhóm mới</string>
	<string name="txt_warning_no_tour_group">Bạn chưa có nhóm. Bạn có muốn tạo nhóm mới không?</string>
	<string name="txt_title_tour_group">Nhóm Tour</string>
	<string name="txt_label_agree">Đồng ý</string>
	<string name="txt_label_cancel">Hủy</string>
	<string name="txt_label_ok">OK</string>
	<string name="txt_alert_notifi">Thông báo</string>
	<string name="txt_alert_warning">Cảnh báo</string>
	<string name="txt_alert_close">Đóng</string>
	<string name="txt_label_add_new">Thêm</string>
	<string name="txt_label_new">Thêm mới</string>
	<string name="txt_title_new_group">Thêm nhóm</string>
	<string name="name_tour">Clear team</string>
	<string name="chi_tiet_lt">Chi tiết lịch trình di chuyển</string>
	<string name="address_start">Hà Nội</string>
	<string name="khoi_hanh">Khời hành: </string>
	<string name="them_tram_dung_chan">Thêm trạm dừng chân</string>
	<string name="btn_them">Thêm</string>
	<string name="dia_chi_dung_chan">Địa chỉ dừng chân</string>
	<!--    bottom sheet-->
	<string name="txt_label_restaurant">Nhà hàng, quán ăn</string>
	<string name="txt_label_hotel">Khách sạn, nhà nghỉ</string>
	<string name="txt_label_pharmacies">Hiệu thuốc</string>
	<string name="txt_label_hospital">Bệnh viện</string>
	<string name="txt_label_ATM">Cây ATM</string>
	<string name="txt_label_petroleum">Trạm xăng, dầu</string>
	<string name="txt_label_grocery">Cửa hàng tạp hóa</string>
	<string name="txt_label_tourist_destination">Địa danh</string>
	<string name="title_status">Bạn bè đang online</string>
	<string name="status_member">Chưa có bạn bè online</string>
	<string name="status_scheduler">Bạn Chưa có lịch trình nào</string>
	<string name="name_notify">Lê Hoàng</string>
	<string name="message_notify">Xin tham gia vào nhóm phượt của bạn</string>
	<string name="date_notify">20/11/2019</string>
	<string name="hour_notify">22:00</string>
	<string name="refuse">Từ chối</string>
	<string name="confirm">Đồng ý</string>
	<string name="chua_xn">Chưa phê duyệt</string>
	<string name="refuse_status">Từ chối yêu câu</string>
	<string name="confirm_status">Đồng ý yêu câu</string>
	<string name="txt_label_loading">Vui lòng chờ</string>
	<!--    sos-->
	<string name="txt_label_sos">SOS</string>
	<string name="txt_lienhekhancap">Thêm liên hệ khẩn cấp</string>
	<string name="txt_lienhekhancap1">Liên hệ thứ nhất</string>
	<string name="txt_lienhekhancap2">Liên hệ thứ 2</string>
	<string name="txt_lienhekhancap3">Liên hệ thứ 3</string>
	<string name="txt_tinnhankhancap">Thêm tin nhắn khẩn cấp</string>
	<string name="txt_hint_tinnhankhancap">Tôi đang cần sự giúp đỡ!</string>
	<string name="txt_label_confirm_sos">Xác nhận</string>
	<string name="txt_hint_tenlienhe">Tên liên hệ</string>
	<string name="txt_hint_sodienthoai">Số điện thoại</string>
	<string name="txt_error_namesos">Vui lòng nhập tên liên hệ</string>
	<string name="txt_error_phonesos1">Vui lòng nhập số điện thoại liên hệ</string>
	<string name="txt_error_phonesos2">Số điện thoại không đúng</string>
	<string name="txt_hint_contentsos">Vui lòng nhập nội dung tin nhắn</string>
	<string name="txt_label_success_info_sos">Lưu thông tin thành công</string>
	<string name="them_thanh_vien">Thêm thành viên</string>
	<string name="xoa_nhom">Xóa nhóm</string>
	<string name="thong_bao">Thông báo</string>
	<string name="btn_huy">Hủy</string>
	<string name="btn_thong_bao">Thông báo</string>
	<string name="ed_noi_dung">Nội dung</string>
	<string name="ed_tieu_de">Tiêu đề</string>
	<string name="vi_tri">Vị Trí</string>
	<string name="sua_tt">Sửa thông tin</string>
	<string name="ho_ten">Họ và tên:</string>
	<string name="email">Email:</string>
	<string name="pass">Mật khẩu:</string>
	<string name="nhap_mk">Nhập mật khẩu</string>
	<string name="xn_mk">Xác nhận mật khẩu:</string>
	<string name="nl_mk">Nhập lại mật khẩu</string>
	<string name="sdt">Số điện thoại:</string>
	<string name="nh_sdt">Nhập số điện thoại</string>
	<string name="nh_email">Nhập email</string>
	<string name="txt_label_error_info_sos">Vui lòng thêm thông tin liên lạc</string>
	<string name="txt_label_sendding_sos">Đang gửi tin nhắn SOS</string>

	<string name="name_tour">Clear team</string>
	<string name="chi_tiet_lt">Chi tiết lịch trình di chuyển</string>
	<string name="address_start">Hà Nội</string>
	<string name="khoi_hanh">Khời hành: </string>
	<string name="them_tram_dung_chan">Thêm trạm dừng chân</string>
	<string name="btn_them">Thêm</string>
	<string name="dia_chi_dung_chan">Địa chỉ dừng chân</string>

</resources>
