<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_home_black_24dp"
			android:title="@string/menu_home" />
		<item
			android:id="@+id/nav_group"
			android:icon="@drawable/ic_group"
			android:title="@string/menu_group" />
		<item
			android:id="@+id/nav_schedule"
			android:icon="@drawable/ic_assignment"
			android:title="@string/menu_schedule" />

		<item
			android:id="@+id/nav_notifi"
			android:icon="@drawable/ic_notifications"
			android:title="@string/menu_notifi" />

		<item
			android:id="@+id/nav_setting"
			android:icon="@drawable/ic_settings"
			android:title="@string/menu_setting" />

		<item
			android:id="@+id/nav_user"
			android:icon="@drawable/ic_person"
			android:title="@string/menu_user" />
	</group>

	<item android:title="Giao tiếp">
		<menu>

			<item
				android:id="@+id/nav_introduction"
				android:icon="@drawable/ic_introduct"
				android:title="@string/menu_introduction" />
			<item
				android:id="@+id/nav_out"
				android:icon="@drawable/ic_input"
				android:title="@string/menu_out" />
		</menu>
	</item>

</menu>
