<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	app:cardCornerRadius="@dimen/dp_8"
	app:cardElevation="@dimen/dp_8">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="@dimen/dp_20">

		<EditText
			android:id="@+id/ed_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/ed_tieu_de" />

		<EditText
			android:id="@+id/ed_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/ed_noi_dung" />



		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dp_10"
			android:gravity="center"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btnCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_huy" />

			<Button
				android:id="@+id/btnOk"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_thong_bao" />
		</LinearLayout>


	</LinearLayout>


</androidx.cardview.widget.CardView>