<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.DetailNotify">

	<ImageView
		android:id="@+id/imgHeader"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_200"
		android:scaleType="centerCrop"
		android:src="@drawable/img_header" />
	<ImageView
		android:id="@+id/img_back"
		android:layout_width="@dimen/dp_24"
		android:layout_height="@dimen/dp_24"
		android:src="@drawable/bg_back"
		android:layout_marginTop="@dimen/dp_15"
		android:layout_marginLeft="@dimen/dp_15"/>

	<ImageView
		android:id="@+id/img_logo"
		android:layout_width="@dimen/dp_60"
		android:layout_height="@dimen/dp_60"
		android:layout_below="@+id/imgHeader"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="@dimen/dp_30"
		android:src="@drawable/logo" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/img_logo"
		android:layout_marginTop="@dimen/dp_20"
		android:paddingRight="10dp"
		android:paddingLeft="@dimen/dp_10"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tv_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/name_notify"
				android:textColor="@color/text"
				android:layout_marginLeft="@dimen/dp_10"
				android:textSize="@dimen/size_16"
				android:textStyle="bold" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=" :"
				android:textColor="@color/text"
				android:textSize="@dimen/size_16"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/tv_message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/message_notify"
				android:textAlignment="center"
				android:textColor="@color/text"
				android:textSize="@dimen/size_16"/>
		</LinearLayout>
		<TextView
			android:id="@+id/tv_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/date_notify"
			android:textColor="@color/text"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/dp_20"
			android:textStyle="italic"/>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="@dimen/dp_20"
			android:orientation="horizontal">
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/refuse"
				android:padding="@dimen/dp_10"
				android:id="@+id/btn_refuse"/>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/confirm"
				android:padding="@dimen/dp_10"
				android:id="@+id/btn_confirm"/>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>