<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@drawable/bg_dialog"
	android:padding="@dimen/dp_20">
	<TextView
		android:id="@+id/tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/text"
		android:textSize="@dimen/size_16"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="@dimen/dp_10"
		android:text="@string/thong_bao"/>
	<TextView
		android:id="@+id/tv_status"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/text_hint"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="@dimen/dp_10"
		android:text="@string/status_delete_group"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/dp_10"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnCancel"
			android:layout_width="@dimen/dp_125"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/dp_1"
			android:background="@drawable/bg_btn_huy"
			android:text="@string/btn_huy"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="@dimen/size_16" />

		<Button
			android:id="@+id/btnOk"
			android:layout_width="@dimen/dp_125"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/dp_1"
			android:background="@drawable/bg_btn_ok"
			android:text="@string/btn_thong_bao"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="@dimen/size_16" />
	</LinearLayout>
</LinearLayout>