<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SOSSettingActivity">

    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/toolbar_sos"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="?attr/actionBarSize"-->
    <!--        android:background="@color/bg_toolbar"-->
    <!--        android:contentInsetStart="0dp"-->
    <!--        android:contentInsetLeft="0dp"-->
    <!--        app:contentInsetLeft="0dp"-->
    <!--        app:contentInsetStart="0dp">-->

    <!--        <RelativeLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent">-->

    <!--            <ImageView-->
    <!--                android:id="@+id/img_back_setting"-->
    <!--                android:layout_width="@dimen/dp_40"-->
    <!--                android:layout_height="@dimen/dp_40"-->
    <!--                android:layout_centerVertical="true"-->
    <!--                android:background="?attr/selectableItemBackground"-->
    <!--                android:padding="@dimen/dp_8"-->
    <!--                android:src="@drawable/ic_back" />-->

    <!--            <TextView-->
    <!--                style="@style/font_normal_medium"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_centerInParent="true"-->
    <!--                android:text="@string/txt_label_sos"-->
    <!--                android:textColor="@color/white" />-->

    <!--        </RelativeLayout>-->
    <!--    </androidx.appcompat.widget.Toolbar>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/font_normal_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:text="@string/txt_lienhekhancap"
            android:textSize="@dimen/size_15" />

        <TextView
            style="@style/font_normal_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_2"
            android:text="@string/txt_lienhekhancap1"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_tenlienhe1"
                style="@style/font_normal_small"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/bg_editext_sos"
                android:hint="@string/txt_hint_tenlienhe"
                android:paddingLeft="@dimen/dp_4"
                android:textSize="@dimen/size_15" />

            <EditText
                android:id="@+id/ed_phonelienhe1"
                style="@style/font_normal_small"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/bg_editext_sos"
                android:hint="@string/txt_hint_sodienthoai"
                android:inputType="phone"
                android:paddingLeft="@dimen/dp_4"
                android:textSize="@dimen/size_15" />


        </LinearLayout>

        <TextView
            style="@style/font_normal_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_2"
            android:text="@string/txt_lienhekhancap2"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_tenlienhe2"
                style="@style/font_normal_small"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/bg_editext_sos"
                android:hint="@string/txt_hint_tenlienhe"
                android:paddingLeft="@dimen/dp_4"
                android:textSize="@dimen/size_15" />

            <EditText
                android:id="@+id/ed_phonelienhe2"
                style="@style/font_normal_small"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/bg_editext_sos"
                android:hint="@string/txt_hint_sodienthoai"
                android:inputType="phone"
                android:paddingLeft="@dimen/dp_4"
                android:textSize="@dimen/size_15" />


        </LinearLayout>

        <TextView
            style="@style/font_normal_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_2"
            android:text="@string/txt_lienhekhancap3"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_tenlienhe3"
                style="@style/font_normal_small"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/bg_editext_sos"
                android:hint="@string/txt_hint_tenlienhe"
                android:paddingLeft="@dimen/dp_4"
                android:textSize="@dimen/size_15" />

            <EditText
                android:id="@+id/ed_phonelienhe3"
                style="@style/font_normal_small"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_weight="1"
                android:background="@drawable/bg_editext_sos"
                android:hint="@string/txt_hint_sodienthoai"
                android:inputType="phone"
                android:paddingLeft="@dimen/dp_4"
                android:textSize="@dimen/size_15" />

        </LinearLayout>

        <TextView
            style="@style/font_normal_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_2"
            android:text="@string/txt_tinnhankhancap"
            android:textSize="@dimen/size_15" />

        <EditText
            android:id="@+id/ed_tinnhansos"
            style="@style/font_normal_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:background="@drawable/bg_editext_sos"
            android:gravity="left|top"
            android:hint="@string/txt_hint_tinnhankhancap"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="@dimen/dp_80"
            android:padding="@dimen/dp_4"
            android:textSize="@dimen/size_15" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@drawable/bg_btn_sos"
        android:onClick="onConfirmSOS"
        android:text="@string/txt_label_confirm_sos"
        android:textColor="@color/white" />


</RelativeLayout>