<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.SchedulerDetailActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<RelativeLayout
				android:id="@+id/rl_toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:layout_alignParentStart="true"
				android:background="@color/bg_toolbar"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<ImageButton
					android:id="@+id/img_back"
					android:layout_width="@dimen/dp_24"
					android:layout_height="@dimen/dp_24"
					android:layout_centerVertical="true"
					android:layout_marginLeft="@dimen/dp_15"
					android:background="@drawable/ic_back"
					android:padding="@dimen/dp_8" />

				<TextView
					android:id="@+id/tvNameGroup"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:text="@string/name_tour"
					android:textColor="@color/white"
					android:textSize="@dimen/size_18"
					android:textStyle="bold" />
			</RelativeLayout>

			<TextView
				android:id="@+id/tv_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="@dimen/dp_20"
				android:text="@string/chi_tiet_lt"
				android:textColor="@color/text"
				android:textSize="@dimen/size_18"
				android:textStyle="bold"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/rl_toolbar" />

			<RelativeLayout
				android:id="@+id/rl_2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_1"
				android:layout_marginTop="@dimen/dp_35"
				android:paddingLeft="@dimen/dp_20"
				android:paddingRight="@dimen/dp_20"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_1">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<ImageView
						android:id="@+id/img_address"
						android:layout_width="@dimen/dp_35"
						android:layout_height="@dimen/dp_35"
						android:src="@drawable/ic_address_start" />

					<TextView
						android:id="@+id/tv_address_start"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginLeft="@dimen/dp_10"
						android:layout_toRightOf="@id/img_address"
						android:text="@string/address_start"
						android:textColor="@color/text"
						android:textSize="@dimen/size_16"
						android:textStyle="bold" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:orientation="horizontal">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/khoi_hanh"
						android:textSize="@dimen/size_14" />

					<TextView
						android:id="@+id/tv_date"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/date_notify"
						android:textSize="@dimen/size_14" />
				</LinearLayout>

			</RelativeLayout>

			<ImageView
				android:id="@+id/line"
				android:layout_width="5dp"
				android:layout_height="@dimen/dp_40"
				android:layout_below="@+id/rl_2"
				android:layout_marginLeft="@dimen/dp_35"
				android:layout_marginTop="@dimen/dp_5"
				android:src="@drawable/line"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/rl_2" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rcv_list_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/dp_30"
				android:paddingRight="@dimen/dp_20"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/line" />

			<RelativeLayout
				android:id="@+id/relativeLayout2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/dp_30"
				android:paddingRight="@dimen/dp_20"
				android:layout_marginTop="@dimen/dp_5"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toBottomOf="@id/rcv_list_address">

				<ImageView
					android:id="@+id/img_address_end"
					android:layout_width="@dimen/dp_35"
					android:layout_height="@dimen/dp_35"
					android:src="@drawable/address_end" />

				<TextView
					android:id="@+id/tv_address_end"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="@dimen/dp_10"
					android:layout_toRightOf="@id/img_address_end"
					android:text="@string/address_start"
					android:textColor="@color/text"
					android:textSize="@dimen/size_16"
					android:textStyle="bold" />
			</RelativeLayout>

			<Button
				android:id="@+id/btn_add_stop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/dp_20"
				android:layout_marginTop="@dimen/dp_30"
				android:drawableLeft="@drawable/ic_add_circle"
				android:drawablePadding="@dimen/dp_8"
				android:paddingLeft="@dimen/dp_8"
				android:paddingRight="@dimen/dp_8"
				android:text="@string/them_tram_dung_chan"
				android:textAllCaps="false"
				android:textSize="@dimen/size_16"
				android:layout_marginBottom="@dimen/dp_30"
				android:background="@color/btn_them_tram"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>