<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/carview"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginLeft="@dimen/dp_15"
	android:layout_marginTop="@dimen/dp_10"
	android:layout_marginRight="@dimen/dp_15"
	android:layout_marginBottom="@dimen/dp_10"
	android:background="@drawable/bg_item_group"
	android:clickable="true"
	android:minHeight="@dimen/dp_68"
	android:orientation="vertical"
	android:padding="@dimen/dp_4"
	app:cardCornerRadius="@dimen/dp_8">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="@dimen/dp_5">

		<ImageView
			android:id="@+id/imgAvataGroup"
			android:layout_width="90dp"
			android:layout_height="90dp"
			android:src="@drawable/logo" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_vertical"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/tvNameSender"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Lê Hoàng"
					android:textColor="@color/text"
					android:textSize="@dimen/size_14"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/tv_message"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/dp_10"
					android:text="@string/message_notify"
					android:textColor="@color/text"
					android:textSize="@dimen/size_12" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/tv_hour"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/hour_notify"
						android:textColor="@color/text"
						android:textSize="@dimen/size_12" />

					<TextView
						android:id="@+id/tv_date"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/date_notify"
						android:textColor="@color/text"
						android:textSize="@dimen/size_12" />

				</LinearLayout>
				<TextView
					android:id="@+id/tv_status"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Chưa phê duyệt"
					android:layout_marginLeft="@dimen/dp_40"
					android:textColor="@color/text"
					android:textStyle="italic"
					android:layout_gravity="center"
					android:textSize="@dimen/size_14"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>


</LinearLayout>